samples/_failures_safe/1761342196_0b1903_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ecbc973.c: In function ‘main’:
./samples/SAFE/__tmp_1ecbc973.c:152:13: error: expected declaration or statement at end of input
  152 |             case 2:
      |             ^~~~
./samples/SAFE/__tmp_1ecbc973.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1ecbc973.c:152:13: error: expected declaration or statement at end of input
